zigbee2mqtt/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zigbee2mqtt
  namespace: zigbee2mqtt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zigbee2mqtt
  template:
    metadata:
      labels:
        app: zigbee2mqtt
    spec:
      nodeSelector:
        zigbee-usb: "true"
      containers:
      - name: zigbee2mqtt
        image: koenkk/zigbee2mqtt:latest
        securityContext:
          privileged: true
        volumeMounts:
        - name: zigbee-device
          mountPath: /dev/ttyUSB0
        - name: zigbee-dialout
          mountPath: /dev/serial
        - name: data
          mountPath: /app/data
      volumes:
      - name: zigbee-device
        hostPath:
          path: /dev/ttyUSB0
          type: CharDevice
      - name: zigbee-dialout
        hostPath:
          path: /dev/serial
          type: Directory
      - name: data
        persistentVolumeClaim:
          claimName: zigbee2mqtt-data
      - name: config
        configMap:
          name: zigbee2mqtt-config
